4.1
 * Migrate track_warnings to more standard naming conventions and use latest configuration types rather than long (CASSANDRA-17560)
 * Add support for CONTAINS and CONTAINS KEY in conditional UPDATE and DELETE statement (CASSANDRA-10537)
 * Migrate advanced config parameters to the new Config types (CASSANDRA-17431)
 * Make null to be meaning disabled and leave 0 as a valid value for permissions_update_interval, roles_update_interval, credentials_update_interval (CASSANDRA-17431)
 * Fix typo in Config annotation (CASSANDRA-17431)
 * Made Converters type safe and fixed a few cases where converters used the wrong type (CASSANDRA-17431)
 * Fix null bug in DataStorageSpec and DurationSpec and require units to be added when providing 0 value (CASSANDRA-17431)
 * Shutdown ScheduledExecutors as part of node drainage (CASSANDRA-17493)
 * Provide JMX endpoint to allow transient logging of blocking read repairs (CASSANDRA-17471)
 * Add guardrail for GROUP BY queries (CASSANDRA-17509)
 * make pylib PEP and pylint compliant (CASSANDRA-17546)
 * Add support for vnodes in jvm-dtest (CASSANDRA-17332)
 * Remove guardrails global enable flag (CASSANDRA-17499)
 * Clients using JMX are unable to handle non-standard java types but we leak this into our interfaces (CASSANDRA-17527)
 * Remove stress server functionality (CASSANDRA-17535)
 * Reduce histogram snapshot long[] allocation overhead during speculative read and write threshold updates (CASSANDRA-17523)
 * Add guardrail for creation of secondary indexes (CASSANDRA-17498)
 * Add guardrail to disallow creation of uncompressed tables (CASSANDRA-17504)
 * Add guardrail to disallow creation of new COMPACT STORAGE tables (CASSANDRA-17522)
 * repair vtables should expose a completed field due to lack of filtering options in CQL (CASSANDRA-17520)
 * remove outdated code from cqlsh (CASSANDRA-17490)
 * remove support for deprecated version specific TLS in Python 3.6 (CASSANDRA-17365)